--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,11 +6,11 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_agenda"
+        android:icon="@mipmap/ic_document_manager"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_agenda_round"
+        android:roundIcon="@mipmap/ic_document_manager_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Agenda_Online"
+        android:theme="@style/Theme.document_manager"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity2"
@@ -20,7 +20,7 @@
             android:name=".MenuPrincipal"
             android:exported="false"
             android:label="@string/title_activity_menu_principal"
-            android:theme="@style/Theme.Agenda_Online" />
+            android:theme="@style/Theme.document_manager" />
         <activity
             android:name=".Registro"
             android:exported="false"
