--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,13 @@
         android:theme="@style/Theme.document_manager"
         tools:targetApi="31">
         <activity
+            android:name=".MainMenuActivity"
+            android:exported="false"
+            android:label="@string/title_activity_main_menu"
+            android:theme="@style/Theme.document_manager.NoActionBar" />
+        <activity
             android:name=".MainActivity2"
             android:exported="false" />
-
         <activity
             android:name=".MenuPrincipal"
             android:exported="false"
@@ -24,7 +28,7 @@
         <activity
             android:name=".Registro"
             android:exported="false"
-            android:theme="@style/Theme.Material3.Light.NoActionBar"/>
+            android:theme="@style/Theme.Material3.Light.NoActionBar" />
         <activity
             android:name=".Login"
             android:exported="false" />
